# typed-config

./: LICENSE  README.md  pyproject.toml
test/tests/: conftest.py  test_BaseConfig.py  test_datacast_enum.py  test_getattribute.py  test_listed_config.py  test_listed_nested_config.py  test_load_config.py  test_nested_config.py  test_repr.py  test_simple_config.py  test_unpacking.py
test/tests/test_configs/json/: simple_config.json
test/tests/test_configs/yaml/: simple_config.yaml
typed_config/: __init__.py  config.py  datacast.py  exceptions.py  setting.py
